Update to more connsistent messages and errors.
