# routes/users.js
@@ -1,15 +1,23 @@
 const express = require("express");
 const router = express.Router();
 const UserController = require("../controllers/UserController");
-const {authentication, isAdmin} = require("../middlewares/authentication");
+const { authentication } = require("../middlewares/authentication");
 
 router.post("/", UserController.register);
 router.post("/login", UserController.login);
 router.get("/confirm/:emailToken", UserController.confirm);
 router.get("/myBasicInfo", authentication, UserController.getCurrent);
-router.get("/myInfoWithPosts", authentication, UserController.getCurrentWithPostProjectFollowerCount);
-router.get("/myExtendedInfo", authentication, UserController.getCurrentWithPostProjectFollowers);
-router.get("/id/:_id", UserController.getById);
+router.get(
+	"/myInfoWithPosts",
+	authentication,
+	UserController.getCurrentWithPostProjectFollowerCount
+);
+router.get(
+	"/myExtendedInfo",
+	authentication,
+	UserController.getCurrentWithPostProjectFollowers
+);
+router.get("/:_id", UserController.getById);
 router.get("/name/:name", UserController.getByName);
 router.put("/follow/:_id", authentication, UserController.follow);
 router.put("/unfollow/:_id", authentication, UserController.unfollow);
